--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,9 @@ header {
     background-color: #16304b;
     color: #fff;
     text-align: center;
-    padding: 0.00005rem; /* Reduced padding */
-    border-bottom: 2px solid #0d2538; /* Dark blue and less thick */
-    font-size: 1.0rem; /* Adjust font size if needed */
+    padding: 0.00005rem;
+    border-bottom: 2px solid #0d2538;
+    font-size: 1.0rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -24,9 +24,9 @@ header {
 }
 
 .header-img {
-    max-width: 120px; /* Adjust size as needed */
+    max-width: 120px;
     height: auto;
-    margin-right: 10px; /* Space between image and text */
+    margin-right: 10px;
     position: absolute;
     left: 10px;
     top: 50%;
@@ -42,19 +42,19 @@ header {
     background-color: #f1f1f1;
     border-bottom: 1px solid #ccc;
     display: flex;
-    justify-content: space-between; /* Ensure the buttons spread across the width */
+    justify-content: space-between;
 }
 
 .tabs button {
     background-color: inherit;
-    flex: 1; /* Each button takes up an equal share of the available space */
+    flex: 1;
     border: none;
     outline: none;
     cursor: pointer;
     padding: 14px 16px;
     transition: 0.3s;
-    text-align: center; /* Center text within the buttons */
-    font-size: 1rem; /* Adjust font size if needed */
+    text-align: center;
+    font-size: 1rem;
 }
 
 .tabs button:hover {
@@ -73,7 +73,7 @@ main {
 .tabcontent {
     display: none;
     padding: 20px;
-    background-color: #fff; 
+    background-color: #fff;
     border: 1px solid #fff;
     margin-top: -1px;
     height: 100%;
@@ -83,9 +83,9 @@ footer {
     background-color: #16304b;
     color: #fff;
     text-align: center;
-    padding: 0.00005rem; 
-    border-top: 2px solid #0d2538; 
-    font-size: 0.7rem; 
+    padding: 0.00005rem;
+    border-top: 2px solid #0d2538;
+    font-size: 0.7rem;
 }
 
 .hobby {
@@ -93,12 +93,7 @@ footer {
     margin-bottom: 20px;
 }
 
-.hobby img {
-    position: absolute;
-    right: 0;
-    max-width: 200px;
-    height: auto;
-}
+
 
 .download-button {
     background-color: #16304b; 
@@ -118,33 +113,32 @@ footer {
     background-color: #d61919;
 }
 
-
 .profile-img {
     float: left;
-    max-width: 150px; 
-    margin-right: 10px; 
-    margin-top: 0px; 
+    max-width: 150px;
+    margin-right: 10px;
+    margin-top: 0px;
 }
 
 #Profile {
     display: flex;
     align-items: center;
 }
-.soccer-img{
-    float: left;
-    max-width: 125px; 
-    margin-right: 10px; 
-    margin-top: 0px;
+
+.hobby {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 75px;
 }
+
+.hobby-img {
+    max-width: 250px;
+    margin-right: 15px;
+}
+
 .VideoGames-img{
-    float: left;
-    max-width: 90px; 
-    margin-right: 10px; 
-    margin-top: 0px;
+    max-width: 350px;
+    margin-right: 65px;
 }
-.travel-img{
-    float: left;
-    max-width: 125px; 
-    margin-right: 10px; 
-    margin-top: 0px;
-}
+
+
